--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-VITE_FIREBASE_API_KEY=AIzaSyDOCAbC123dEfGhIjKlMnOpQrStUvWxYz
-VITE_FIREBASE_AUTH_DOMAIN=mi-proyecto.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=mi-proyecto-123
-VITE_FIREBASE_STORAGE_BUCKET=mi-proyecto.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=1234567890
-VITE_FIREBASE_APP_ID=1:1234567890:web:abc123def456
+VITE_FIREBASE_API_KEY=AIzaSyD3yiksyBPWNFLQ08IT9y9qeHm4M0dt7bc
+VITE_FIREBASE_AUTH_DOMAIN=portafolio-jlfc.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=portafolio-jlfc
+VITE_FIREBASE_STORAGE_BUCKET=portafolio-jlfc.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=677782884130
+VITE_FIREBASE_APP_ID=1:677782884130:web:be88b716b33383f3f21f7b
+VITE_FIREBASE_MEASUREMENT_ID=G-XHM04VEV72
